compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__value_imported_as_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2066
expression: "import gleam/wibble.{type Wobble}"
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/wibble.gleam
pub type Wibble {
               Wobble
             }

-- main.gleam
import gleam/wibble.{type Wobble}

----- ERROR
error: Unknown module type
  ┌─ /src/one/two.gleam:1:22
  │
1 │ import gleam/wibble.{type Wobble}
  │                      ^^^^^^^^^^^ Did you mean `Wobble`?

`Wobble` is only a value, it cannot be imported as a type.
